# phpembed

./: COPYING  CREATING_DISTRIBUTION  LICENSE  Makefile.am  NEWS  README  SConstruct  bootstrap.sh  configure.ac  phpembedVersion.h.in  setup  setup.sh
docs/: phpembed.tex
docs/www/: WARNINGS  footnode.html  index.html  internals.pl  labels.pl  node1.html  node10.html  node100.html  node101.html  node102.html  node103.html  node104.html  node105.html  node11.html  node12.html  node13.html  node14.html  node15.html  node16.html  node162.html  node17.html  node18.html  node19.html  node2.html  node20.html  node21.html  node22.html  node23.html  node24.html  node25.html  node26.html  node27.html  node28.html  node29.html  node3.html  node30.html  node31.html  node32.html  node33.html  node34.html  (+71 more)
examples/: Makefile.am  example.cpp  example.php  test.cpp  test.php  usage.cpp  usage.php
src/: Makefile.am  php_arr.cpp  php_arr.h  php_cxx.cpp  php_cxx.h  php_stl.cpp  php_stl.h
